# vizzu-lib

./: .gitignore  CODE_OF_CONDUCT.md
docs/script/: main.js
docs/style/: main.css
example/: data.js  example-node.js  example.js  index.html  test.js
example-node/: example.js  package.json
example/js/: get_query_string.js  host_workspace.js  selenium_with_chrome.js
example/testCases/: test1.js  test2.js
example/testSuite/: vizzutest.js  workspace.js
example/testSuite/browser/: chrome.js
project/cmake/: common.txt
project/cmake/weblib/: CMakeLists.txt  emcc.txt  envswitch.js
src/apps/qutils/: canvas.cpp
src/apps/weblib/: cinterface.cpp  cinterface.h  interface.cpp  interface.h
src/base/geom/: affinetransform.cpp  affinetransform.h
src/base/gfx/: colorpalette.h
src/base/gui/: dragobject.cpp  mainwidget.cpp  movedragobject.cpp  resizebutton.cpp  transformerwidget.cpp
src/base/style/: param.h  parammerger.h  paramregistry.h
src/base/util/: eventdispatcher.cpp
src/chart/animator/: options.cpp  options.h  planner.cpp  styles.cpp  styles.h
src/chart/generator/: diagram.cpp  marker.cpp  marker.h  scalestats.cpp
src/chart/main/: style.cpp  style.h
src/chart/options/: advancedoptions.cpp  advancedoptions.h  autosplitter.cpp  autosplitter.h  descriptor.cpp  operations.cpp  operations.h  optionbuilder.cpp  optionbuilder.h  options.cpp  options.h  optionsdecorator.h  optionsimplifier.cpp  optionssetter.cpp  optionssetter.h  overlappingfixer.cpp  overlappingfixer.h  scales.cpp  scales.h
src/chart/rendering/: drawinterlacing.cpp  drawitem.cpp  drawlegend.cpp
test/integration/: package.json  vizzutest.js
(+19 files in other folders)
